v2.11 14-05-2018 XW
changed: projects' description to wiki

v2.10 13-05-2018 XW
changed: papers link to wiki

v2.9 09-12-2017 XW
added: AI demo
improved: OBJLoader.js
changed: links to absolute path
improved: 3d viewer

v2.8 27-11-2017 XW
updated: about page

v2.7 25-11-2017 XW
added: favicon.png
updated: welcome message

v2.6 24-11-2017 XW
added: mathjax and more details about papers

v2.5 23-11-2017 XW
added: 3d viewer

v2.4 18-11-2017 XW
updated: package.json

v2.3 14-11-2017 XW
added: fallback for WebRTC
added: robots.txt

v2.2 04-11-2017 XW
added: wiki

v2.1 29-10-2017 XW
removed: 3D viewer for obj file
added: files into .gitignore
updated: package.json

v2.0 28-10-2017 XW
fixed: images compression (issue #2)
removed: unnecessary js files.
added: markdown.js
added: git server

v1.6 27-10-2017 XW
added: 3D viewer for obj file

v1.5 25-10-2017 XW
added: unittest
cleared: unused js files

v1.4 22-10-2017 XW
added: p2p video streaming (issue #4)
fixed: navbar (issue #5)

v1.3 15-10-2017 XW
removed: bootstrap.js and jquery.js

v1.2 16-06-2017 XW
fixed: donate button is in dutch. (issue #1)

v1.1 24-06-2017 XW
removed: contact page
added: footer in each page