@@ -1,5 +1,6 @@
 v2.11 14-05-2018 XW
 changed: projects' description to wiki
+added: space at show progress
 
 v2.10 13-05-2018 XW
 changed: papers link to wiki
